build_error_refactor.txt

> Configure project :fabric
Fabric Loom: 1.5.8

> Task :common:clean
> Task :fabric:clean
> Task :forge:clean

> Task :common:compileJava
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

> Task :common:processResources
> Task :common:classes
> Task :common:jar
> Task :common:downloadMcpConfig
> Task :common:extractSrg
> Task :common:createMcpToSrg
> Task :common:reobfJar
> Task :common:jarJar SKIPPED
> Task :common:reobfJarJar SKIPPED
> Task :common:assemble
> Task :common:compileTestJava NO-SOURCE
> Task :common:processTestResources NO-SOURCE
> Task :common:testClasses UP-TO-DATE
> Task :common:test NO-SOURCE
> Task :common:check UP-TO-DATE
> Task :common:build

> Task :fabric:compileJava FAILED
/home/az/project/BusinessCraft/fabric/src/main/java/com/quackers29/businesscraft/fabric/platform/FabricEventHelper.java:18: error: FabricEventHelper is not abstract and does not override abstract method setActiveTownBlock(Object) in EventHelper
public class FabricEventHelper implements EventHelper {
       ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':fabric:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.8/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 6s
11 actionable tasks: 11 executed
